--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.4.3",
+    "@heroicons/vue": "^1.0.5",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -16,6 +18,7 @@
     "@vue/cli-plugin-babel": "~5.0.0-rc.2",
     "@vue/cli-plugin-router": "~5.0.0-rc.2",
     "@vue/cli-plugin-vuex": "~5.0.0-rc.2",
-    "@vue/cli-service": "~5.0.0-rc.2"
+    "@vue/cli-service": "~5.0.0-rc.2",
+    "tailwindcss": "^3.0.15"
   }
 }
