--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/vue": "^1.4.3",
     "@heroicons/vue": "^1.0.5",
     "core-js": "^3.8.3",
+    "daisyui": "^1.25.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
